fix: Java 17 compatibility